<com.smona.app.preinstallclient.view.NoNetworkView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/no_network_image"
        android:layout_marginTop="84dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/no_network_wifi" />

    <TextView
        android:id="@+id/no_network_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_network_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/no_network_marginTop"
        android:textColor="#aaaaaa"
        android:text="@string/no_network_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/no_network_try"
            android:layout_width="135dp"
            android:layout_height="43dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/green_bt_selector"
            android:text="@string/no_network_try"
            android:textColor="#717171"
            android:textSize="14sp" />

        <Button
            android:id="@+id/no_network_set"
            android:layout_width="135dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/grey_bt_selector"
            android:text="@string/no_network_set"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

</com.smona.app.preinstallclient.view.NoNetworkView>