<com.smona.app.preinstallclient.view.DownloadingElement xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="@dimen/download_item_image_size"
        android:layout_height="@dimen/download_item_image_size"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/next_action_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textSize="10sp"
        android:text="@string/download_pause"
        android:layout_marginRight="10dp"
        android:drawableTop="@drawable/pause" />

    <LinearLayout
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/download_manager_desc_margin_right"
        android:layout_toLeftOf="@+id/next_action_status"
        android:layout_toRightOf="@+id/appIcon"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/appName"
                style="@style/download_appName"
                android:textSize="10sp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="@string/download_idle" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:textSize="10sp"
                android:layout_height="@dimen/download_status_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dp"
                android:text="@string/progress_text_raido" />
        </RelativeLayout>

        <com.smona.app.preinstallclient.view.ProgressView
            android:id="@+id/download_progress"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/download_manager_status_height"
            android:layout_marginBottom="@dimen/download_progress_margin"
            android:layout_marginTop="@dimen/download_progress_margin"
            android:layout_weight="1"
            android:background="@drawable/download_manager_progress_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current_download_status"
                style="@style/download_appName"
                android:layout_centerVertical="true"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"
                android:text="@string/donwload_status_des_running" />

            <TextView
                android:id="@+id/current_download_size"
                android:layout_width="wrap_content"
                android:textSize="10sp"
                android:layout_height="@dimen/download_status_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dp" />
        </RelativeLayout>
    </LinearLayout>

</com.smona.app.preinstallclient.view.DownloadingElement>